[project]
name = "LrnTelegramBot"
author = "RafalW3bCraft"
version = "0.1.0"
description = "A comprehensive collection of Telegram bots demonstrating various bot functionalities including messaging, media sharing, and intelligent conversation capabilities."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
